# olist_data_project

./: .gitattributes  .gitignore  README-pt-BR.md  README.md  pyproject.toml  requirements.txt
app/: Home.py  app.py
app/pages/: 1_💳_Pagamentos.py  2_💲_Vendas.py  3_👨‍💼_Vendedores.py  4_🛒_Produtos.py  5_👥_Clientes.py  6_🤝_Funil_de_Leads.py  7_📦_Logistica.py  8_💼_CoPilot_Business.py
app/services/: copilot_business_model_v1.py
notebooks/: business_rules.ipynb  workflows.ipynb
orchestration/: workflows.py
pipelines/: duckdb_database.py  extract.py  gold_transform.py  queries_sql.py  transform.py  utils.py  workflows.py
pipelines/models/gold/: agg_sellers_cancellation_rate.sql  agg_sellers_cancellation_rate_v2.sql  freight_analysis.sql  geo_sales.sql  gold_customers_segmented.sql  gold_payment_performance.sql  gold_product_inventory_priority.sql  gold_product_profitability_analysis.sql  gold_qualified_leads_priority.sql  gold_sellers_order_reviews_score.sql  gold_sellers_shipment_metrics.sql  regional_demand_supply_balance.sql  sales_by_category.sql  seller_performance.sql
pipelines/models/silver/: aggregated_customers_silver.sql  aggregated_leads_silver.sql  customers_silver.sql  geolocation_silver.sql  leads_closed_silver.sql  leads_qualified_silver.sql  order_items_silver.sql  orders_full_data_silver.sql  orders_only_delivered_silver.sql  payments_silver.sql  products_silver.sql  reviews_silver.sql  sellers_silver.sql
workloads/: ingestion_pipeline.py  workload_manager.py
