[project]
name = "olist-data-project"
version = "0.1.0"
description = "A data engineering and analytics project based on real commercial data from the Brazilian e-commerce platform Olist"
authors = [
    {name = "Gabriel Nunes",email = "gabrielnunecosta@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb (>=1.2.0,<2.0.0)",
    "deltalake (>=0.25.2,<0.26.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "apache-airflow (>=2.10.5,<3.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
